--- a/ChangeLog
+++ b/ChangeLog
@@ -13,3 +13,5 @@
 	* Simplify output of dropbox check if fewer than 20 dropboxes
 2021-04-17 David Klann <dklann@broadcasttool.com>
 	* Bump the PACKAGE_VERSION
+2021-04-17 David Klann <dklann@broadcasttool.com>
+	* Add support for Rivendell 3.X
