Fix dropbox reset logic to work with Rivendell 3.x. Add an offer (prompt) to create a matching Event after successfully creating a new dropbox.
Minor other cleanup and corrections.

Signed-off-by: David Klann <dklann@broadcasttool.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,3 +15,6 @@
 	* Bump the PACKAGE_VERSION
 2021-04-17 David Klann <dklann@broadcasttool.com>
 	* Add support for Rivendell 3.X
+2021-04-18 David Klann <dklann@broadcasttool.com
+	* Fix rdimport/rdservice recovery process
+	* Add support for creating a new Event after creating a dropbox
