--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,9 @@
 	* Bump the PACKAGE_VERSION
 2021-04-17 David Klann <dklann@broadcasttool.com>
 	* Add support for Rivendell 3.X
-2021-04-18 David Klann <dklann@broadcasttool.com
+2021-04-18 David Klann <dklann@broadcasttool.com>
 	* Fix rdimport/rdservice recovery process
 	* Add support for creating a new Event after creating a dropbox
+2021-09-27 David Klann <dklann@broadcasttool.com>
+	* Fix declarations in rdfetch.in (shellcheck)
+	* Fix use of $HOSTNAME in zsh-functions.in
