--- a/ChangeLog
+++ b/ChangeLog
@@ -21,3 +21,5 @@
 2021-09-27 David Klann <dklann@broadcasttool.com>
 	* Fix declarations in rdfetch.in (shellcheck)
 	* Fix use of $HOSTNAME in zsh-functions.in
+2021-09-27 David Klann <dklann@broadcasttool.com>
+	* Fix typo in zsh-functions:sendNotification()
