--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 The NEWS file for RDFetch.
 -------------------------------------------------------------------------------
+v0.4.14 -- 29 October 2021
+
+Changes:
+   Work harder to determine the enclosure file extension (and thus the
+   type)
+
+-------------------------------------------------------------------------------
 v0.4.13 -- 29 October 2021
 
 Changes:
