--- a/ChangeLog
+++ b/ChangeLog
@@ -31,3 +31,7 @@
 	* Clearer prompts and comments
 2021-10-26 David Klann <dklann@broadcasttool.com>
 	* Work harder to discern the download file extension
+2022-02-02 David Klann <dklann@broadcasttool.com>
+	* Add xmlstarlet as a dependency
+	* Updates for Rivendell 4
+	* Debian packaging
