--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,13 @@
 The NEWS file for RDFetch.
 -------------------------------------------------------------------------------
+v0.4.15 -- 02 February 2022
+
+Changes:
+   Add xmlstarlet as a dependency
+   Debian packaging
+   Updates for Rivendell 4
+
+-------------------------------------------------------------------------------
 v0.4.14 -- 29 October 2021
 
 Changes:
